--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ autopep8 = "*"
 django = "*"
 python-decouple = "*"
 djangorestframework = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
+dj-database-url = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
