--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
 whitenoise = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
